--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,4 +14,15 @@ body {
   padding-bottom: 2.5rem;
 }
 
+.social-container {
+  padding: 0 2rem;
+}
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
 /* Customized bootstrap */
